# cookiecutter-pypackage

./: .gitignore  .gitmodules  cookiecutter.json  justfile  pyproject.toml  run.py
.codex/environments/: environment.toml
docs/: gui_dialogs.md  prompts.md
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.sh
hooks/scripts/: __init__.py
hooks/scripts/github/: callbacks.py  gh_dialogue.py  gh_script.py  shared_types.py
hooks/scripts/iterm/: iterm2_api.py  utils.py
src/cookiecutter_pypackage/: run.py
src/cookiecutter_pypackage/scripts/: __init__.py
src/cookiecutter_pypackage/scripts/github/: gh_dialogue.py  gh_script.py  repo_dialog.py  shared_types.py
src/cookiecutter_pypackage/scripts/gui/: __init__.py  builder.py  dialog.py  font.py  result.py  spec.py  tooltip.py  validation.py  window.py
src/cookiecutter_pypackage/scripts/jinja2_extensions/: __init__.py  pylibrary.py
{{cookiecutter.pypi_package_name}}/: .env  .gitignore  CONTRIBUTING.md  justfile  pyproject.toml  ruff.toml  ty.toml  uv.toml
{{cookiecutter.pypi_package_name}}/.github/workflows/: test.yml
{{cookiecutter.pypi_package_name}}/docs/: conf.py  index.rst  installation.rst  usage.rst
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/cli/: cmd.py  completions.py
{{cookiecutter.pypi_package_name}}/tests/: conftest.py  test_{{cookiecutter.project_slug}}.py
