[project]
name = "cookiecutter-pypackage"
version = "0.2.0"
description = "Cookiecutter template for a Python package"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "Nicholas Corbin", email = "nicholas.corbin@example.com" }
]
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]
dependencies = [
    "cookiecutter",
    "typer",
    "alabaster",
    "watchdog",
    "rich",
    "iterm2-api-wrapper",
    "jinja2",
    "pygithub",
    "dotenv",
]

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "pytest-cookies",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"
]

[project.urls]
homepage = "https://github.com/iLiftALot/cookiecutter-pypackage"

[project.scripts]
cc_watch = "cookiecutter_pypackage.run:main"
cc_pypackage = "cookiecutter_pypackage.cli:main"

[tool.ruff]
exclude = [
    "*cookiecutter.pypi_package_name*"
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[dependency-groups]
dev = [
    "rust-just>=1.42.4",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
iterm2_api_wrapper = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["hooks*", "packages*", "tests*", "docs*", "{{cookiecutter*", "python-boilerplate*"]
