[project]
name = "{{cookiecutter.pypi_package_name}}"
version = "{{ cookiecutter.first_version }}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = []
requires-python = ">= {{ cookiecutter.python_version }}"


[dependency-groups]
dev = [
    "alabaster",
    "watchdog",
    "myst-parser",
    "rust-just",
    "cookiecutter",
    "sphinx",
    "furo",
    "typer",
    "pytest",
    "pytest-cov",
    "icecream",
    "rich",
    "dotenv"
]


[build-system]
requires = ["uv_build >= 0.9.15, <0.10.0"]
build-backend = "uv_build"


[project.urls]
bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"

[project.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli.cmd:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest.log"
log_file_mode = "a"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-vv -l -x"
# Option	            Description
# -v or -vv	          Verbose output
# -l or --showlocals	Show local variables in tracebacks
# -ll                 Show all locals in tracebacks
# -s	                Don't capture stdout (show print statements)
# --tb=long           Full tracebacks
# --tb=short	        Shorter tracebacks
# --tb=no	            No tracebacks
# -x	                Stop on first failure
# --ff	              Run failed tests first
# -q	                Quiet mode
# --durations=10	    Show 10 slowest tests

[tool.uv]
package = true
